# co_async

./: .clang-format  .gitignore  .rgignore  CMakeLists.txt  Dockerfile  README.md  co_async.hpp  convmod.py  debug.hpp  main.cpp  mod2hdr.py  rbtree.hpp  step1.cpp  step2.cpp  step3.cpp  step4.cpp  step6.cpp  step7.cpp
3rd/bearssl/: README.md
3rd/bearssl/include/: bearssl.h  bearssl_block.h  bearssl_ec.h  bearssl_hash.h  bearssl_hmac.h  bearssl_pem.h  bearssl_prf.h  bearssl_rand.h  bearssl_rsa.h  bearssl_ssl.h  bearssl_x509.h  inner.h
3rd/bearssl/samples/: chain-ec.h  chain-rsa.h  client_basic  client_basic.c  client_basic.cpp  compile-and-test-headerized-client.sh  key-rsa.h  server_basic.c  server_basic.cpp
3rd/liburing/: CMakeLists.txt  liburing.cpp
cmake/: clang_std_modules.cmake
cmake/clang_std_modules_source/: compile_pcm.sh  gen.py  std.hpp  std.modulemap  std.pcm  stdmod.py
co_async/: and_then.hpp  auto_destroy_promise.hpp  basic_loop.hpp  benchmark.hpp  co_async.cppm  co_async.hpp  concepts.hpp  current_coroutine.hpp  debug.hpp  epoll_loop.hpp  error_handling.hpp  expected.hpp  filesystem.hpp  generator.hpp  generic_loop.hpp  http.hpp  http_server.hpp  limit_timeout.hpp  make_awaitable.hpp  non_void_helper.hpp  platform.hpp  previous_awaiter.hpp  rbtree.hpp  return_previous.hpp  simple_map.hpp  socket.hpp  std.hpp  stdio.hpp  stream.hpp  stream_base.hpp  string_utils.hpp  system_loop.hpp  task.hpp  timer_loop.hpp  uninitialized.hpp  uring_loop.hpp  utils.hpp  when_all.hpp  when_any.hpp
co_async/awaiter/: and_then.cpp  and_then.hpp  concepts.cpp  concepts.hpp  generator.cppm  generator.hpp  just.hpp  shared_task.hpp  task.cpp  task.cppm  task.hpp  unique_task.hpp  when_all.cppm  when_all.hpp  when_any.cppm  when_any.hpp
co_async/generic/: allocator.cpp  allocator.hpp  cancel.hpp  condition_variable.hpp  future.hpp  generic_io.cpp  generic_io.hpp  io_context.cpp  io_context.hpp  io_context_mt.cpp  io_context_mt.hpp  io_task.hpp  mutex.hpp  queue.hpp  semaphore.hpp  task_group.hpp  thread_pool.cpp  thread_pool.hpp  timeout.hpp  when_any.hpp
co_async/http/: http.hpp  http11.cpp  http11.cppm  http11.hpp  http_client.hpp  http_date_time.hpp  http_protocol.hpp  http_server.cppm  http_server.hpp  http_server_utils.hpp  http_status_code.cpp  http_status_code.hpp  uri.cpp  uri.hpp
co_async/inc/: benchmark.hpp  debug.hpp
co_async/iostream/: bytes_buffer.hpp  cached_stream.hpp  directory_stream.cpp  directory_stream.hpp  file_stream.cpp  file_stream.hpp  gzip_stream.hpp  pipe_stream.cpp  pipe_stream.hpp  socket_stream.hpp  ssl_socket_stream.cpp  ssl_socket_stream.hpp  stdio_stream.cpp  stdio_stream.cppm  stdio_stream.hpp  stream_base.cpp  stream_base.hpp  string_stream.cpp  string_stream.hpp  zlib_stream.cpp  zlib_stream.hpp
co_async/net/: http_client.hpp  http_protocol.cpp  http_protocol.hpp  http_server.cpp  http_server.hpp  http_server_utils.cpp  http_server_utils.hpp  http_string_utils.cpp  http_string_utils.hpp  socket_proxy.cpp  socket_proxy.hpp  uri.cpp  uri.hpp  websocket.hpp
co_async/platform/: error_handling.hpp  fs.hpp  fs_watch.hpp  futex.hpp  pipe.hpp  platform_io.cpp  platform_io.hpp  process.hpp  signal.hpp  socket.cpp  socket.hpp
co_async/system/: error_handling.cpp  error_handling.cppm  error_handling.hpp  fs.cpp  fs.cppm  fs.hpp  fs_notify.hpp  fs_watch.hpp  pipe.hpp  platform_io.hpp  process.hpp  signal.hpp  socket.cpp  socket.cppm  socket.hpp  socket_proxy.hpp  system_loop.cpp  system_loop.cppm  system_loop.hpp  timeout.hpp  timer.hpp  uring_loop.cpp  uring_loop.cppm  uring_loop.hpp
co_async/threading/: basic_loop.cpp  basic_loop.cppm  basic_loop.hpp  cancel.hpp  concurrent_queue.hpp  condition_variable.hpp  future.hpp  future_group.hpp  generic_io.hpp  io_context.hpp  io_context_mt.hpp  mutex.hpp  queue.hpp  task_group.hpp
co_async/utils/: byteorder.hpp  cacheline.hpp  concurrent_queue.hpp  debug.hpp  expected.hpp  finally.hpp  generator_result.hpp  ilist.hpp  non_void_helper.cpp  non_void_helper.hpp  overloaded.hpp  perf.hpp  pimpl.hpp  random.hpp  rbtree.cppm  rbtree.hpp  reflect.hpp  ring_queue.hpp  simple_map.cpp  simple_map.hpp  spin_barrier.hpp  spin_mutex.hpp  string_utils.cpp  string_utils.cppm  string_utils.hpp  uninitialized.cpp  uninitialized.hpp
demo/: main.cpp
examples/: benchmark.hpp  blocking_test.cpp  cancel_test.cpp  chat_server.cpp  code_assistant.cpp  condvar_test.cpp  debug.hpp  diagnostics.cpp  echo_server.cpp  expected.cpp  file_server.cpp  frame_size.cpp  futex_test.cpp  generator.cpp  gunzip.cpp  https_fetch.cpp  inotify.cpp  io_multiplex.cpp  io_timeout.cpp  main.cpp  nop_test.cpp  openai_route.cpp  openai_test.cpp  pipe_read.cpp  pipe_write.cpp  proxy_route.cpp  queue_test.cpp  read_file.cpp  read_image.cpp  rime_server.cpp  semaphore_test.cpp  server.cpp  server_mt.cpp  shell_server.cpp  slow_server.cpp  speed_test.cpp  ssl_client.cpp  ssl_server.cpp  stb_image.h  stress_imposer.cpp  (+4 more)
liburing/: liburing.cc  liburing.cpp  liburing.h
liburing/include/: liburing.h
scripts/: check_coroutine.cpp  co_async.hpp  convmod.py  format.sh  headers.sh  lines.sh  mod2hdr.py  profile.sh  rmmod.py  shell_client.sh  shell_server.sh  single_co_async.hpp  single_header.py  test-cgi.sh
scripts/oldfiles/: future.hpp  generator.hpp  gunzip.cpp  io_task.hpp  shell_client.cpp  shell_server.cpp  slow_server.cpp  stress_imposer.cpp  task_group.hpp
steps/: debug.hpp  rbtree.hpp  run.sh  step11.cpp  step12.cpp  step13.cpp  step14.cpp  step15.cpp  step16.cpp  step17.cpp  step18.cpp  step19.cpp  step20.cpp  step21.cpp  step22.cpp  step23.cpp  step24.cpp  step5.cpp
steps/.trashcan/: epoll_loop.hpp  expected.hpp  stdio.hpp  timer_loop.hpp
steps/co_async/: and_then.hpp  async_loop.hpp  concepts.hpp  epoll_loop.hpp  error_handling.hpp  filesystem.hpp  generator.hpp  limit_timeout.hpp  make_awaitable.hpp  non_void_helper.hpp  noop_loop.hpp  previous_awaiter.hpp  queue_loop.hpp  return_previous.hpp  socket.hpp  stdio.hpp  stream.hpp  stream_base.hpp  task.hpp  timer_loop.hpp  uninitialized.hpp  when_all.hpp  when_any.hpp
(+251 files in other folders)
